@startuml
title Modèle métier OAuth2

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam roundcorner 10

class Application {
    +UUID id
    +String code
    +String description
}

class OAuth2Client {
    +UUID id
    +String clientId
    +String clientSecretHash
}

class OAuth2Scope {
    +UUID id
    +String code
    +String description
}

Application "1" -- "0..*" OAuth2Client : possède >
Application "1" -- "0..*" OAuth2Scope : définit >

OAuth2Client "*" -- "*" OAuth2Scope : autorisé >

@enduml